--- a/TravelPics.UI/src/styles/primeng-overwrites/menubar.scss
+++ b/TravelPics.UI/src/styles/primeng-overwrites/menubar.scss
@@ -29,7 +29,7 @@
     }
      ::ng-deep .p-menubar-end {
         height: $menuBarHeight;
-        width: calc($userMenuWidth - 100px);
+        width: calc($userMenuWidth);
         display: flex;
         flex-direction: row;
         align-items: center;
