Login and register user push

--- a/TravelPics.UI/src/app/app.component.html
+++ b/TravelPics.UI/src/app/app.component.html
@@ -3,8 +3,9 @@
         <travelpics-menubar></travelpics-menubar>
     </div>
     <div class="travelpics-content">
-        <router-outlet></router-outlet>
-
+        <div class="content-page">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
 <p-toast></p-toast>
