--- a/TravelPics.UI/src/app/auth/login/login.component.html
+++ b/TravelPics.UI/src/app/auth/login/login.component.html
@@ -1,18 +1,38 @@
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <h1>Login</h1>
-            <form [formGroup]="loginForm" (ngSubmit)="login()">
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="text" class="form-control" id="email" name="email" formControlName="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" name="password" formControlName="password" required>
-                </div>
-                <button [disabled]="!loginForm.valid" pButton pRipple type="submit" label="Login" class="p-button-raised p-button-primary"></button>
-            </form>
+<div class="col-12 md:col-12">
+    <form [formGroup]="loginForm" (ngSubmit)="login()" class="form-section flex flex-column">
+        <div class="flex align-items-center justify-content-center  mt-4">
+            <h1>Welcome</h1>
         </div>
-    </div>
+        <div class="flex align-items-center justify-content-center mb-4">
+            <img src="../../../assets/images/avatar.png" alt="avatar" style="width:100px;">
+        </div>
+        <div *ngIf="errorMessage !== ''" class="flex align-items-center justify-content-center">
+            <p style="font-size:15px; color:red;">{{errorMessage}}</p>
+        </div>
+        <div class="field">
+            <label for="email" class="col-12 required-label">Email:</label>
+            <div class="col-12  md:col-12 flex block ">
+                <input id="email" class="inputfield w-12" pInputText formControlName="email">
+                <ng-container *ngIf="loginForm.controls['email'].touched && loginForm.controls['email'].invalid">
+                    <!-- <small class="p-error" *ngIf="loginForm.controls['email'].errors?.required">You must use an email address</small> -->
+                    <small class="p-error" *ngIf="loginForm.controls['email'].errors?.emailFormatError">{{loginForm.controls['email'].errors?.emailFormatError}}</small>
+                </ng-container>
+            </div>
+        </div>
+        <div class="field">
+            <label for="password" class="col-12  required-label">Password:</label>
+            <div class=" col-12 md:col-12 flex block ">
+                <input type="password" id="password" class="inputfield w-12" pInputText formControlName="password">
+                <!-- <ng-container *ngIf="loginForm.controls['password'].touched && loginForm.controls['password'].invalid">
+                    <small class="p-error" *ngIf="loginForm.controls['password'].errors?.required">Password is required.</small>
+                </ng-container> -->
+            </div>
+        </div>
+        <div class="field">
+            <label class="col-12">Don't have an account yet? <a (click)="goToRegister()">Register!</a></label>
+        </div>
+        <div class="buttons mb-8">
+            <button [disabled]="!loginForm.valid" pButton pRipple type="submit" label="Login" class="p-button-raised p-button-primary"></button>
+        </div>
+    </form>
 </div>
