--- a/TravelPics.UI/src/app/post/new-post/new-post.component.html
+++ b/TravelPics.UI/src/app/post/new-post/new-post.component.html
@@ -23,6 +23,13 @@
                         </ng-template>
                     </p-fileUpload>
                 </div>
+                <div>
+                    <div class="">
+                        <label>Enter address</label>
+                        <input type="text" class="form-control" (keydown.enter)="$event.preventDefault()" placeholder="Search Location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search>
+                      </div>                     
+                      <h5>Address: {{address}}</h5>
+                </div>
             </form>
         </div>
         <div class="buttons flex align-items-center justify-content-center mb-8">
