--- a/TravelPics.UI/src/app/post/new-post/new-post.component.scss
+++ b/TravelPics.UI/src/app/post/new-post/new-post.component.scss
@@ -28,4 +28,9 @@
         resize: none;
         box-shadow: none;
     }
+    .location-icon{
+        color: var(--primary-color);
+        margin-right:5px;
+        font-size: 1.2rem;
+    }
 }
