Add guard for paths and design

--- a/TravelPics.UI/src/app/app.component.html
+++ b/TravelPics.UI/src/app/app.component.html
@@ -3,7 +3,7 @@
         <travelpics-menubar></travelpics-menubar>
     </div>
     <div class="travelpics-content">
-        <div class="content-page">
+        <div class="content-page mb-6">
             <router-outlet></router-outlet>
         </div>
     </div>
