--- a/TravelPics.UI/src/app/user/register/register.component.scss
+++ b/TravelPics.UI/src/app/user/register/register.component.scss
@@ -1,7 +1,7 @@
 .form-section {
     margin-left: 20%;
     margin-right: 20%;
-    margin-top: 50px;
+    margin-top: 5%;
     -webkit-box-shadow: 0px 0px 30px -6px rgba(92, 112, 102, 1);
     -moz-box-shadow: 0px 0px 30px -6px rgba(92, 112, 102, 1);
     box-shadow: 0px 0px 30px -6px rgba(92, 112, 102, 1);
