--- a/TravelPics.UI/src/app/app.component.scss
+++ b/TravelPics.UI/src/app/app.component.scss
@@ -1,8 +1,5 @@
 .travelpics-container {
-    display: flex;
-    flex-direction: column;
     width: 100%;
-    height: 100%;
     .travelpics-menubar {
         height: 70px;
         box-shadow: 0px 5px 6px #CED4DA;
@@ -14,6 +11,9 @@
     }
     .travelpics-content {
         height: calc(100% - 70px);
+        background-image: url('../assets/images/background.jpg?v=1');
+        background-size: cover;
+        background-position: center;
         .content-page {
             display: flex;
             flex-direction: column;
@@ -23,4 +23,5 @@
             margin: 0 auto;
         }
     }
+
 }
