--- a/TravelPics.UI/src/app/post/my-posts/my-posts.component.html
+++ b/TravelPics.UI/src/app/post/my-posts/my-posts.component.html
@@ -1,6 +1,36 @@
-<div *ngIf="posts.length > 0">
-    <div *ngFor="let document of posts[2].photos">
-        <img [src]="getSanitizedBlobUrlFromBase64(document.content, document.fileName)" alt="{{document.fileName}}" />
+<travelpics-loader class="mt-12" [isLoading]="isLoading" [loadingMessage]="'Loading Personal Posts'"></travelpics-loader>
+<div class="col-12 md:col-12 flex flex-column mt-4 mb-4">
+    <div *ngFor="let post of posts" class="flex flex-column align-items-center justify-content-center p-2 mr-2 ml-2">
+        <div class="flex align-items-start justify-content-start flex-column col-9 md:col-9 border-double border-round-xl border-bluegray-200 surface-overlay shadow-8">
+            <div class="flex  flex-row">
+                <div class="flex align-items-center justify-content-center">
+                    <img src="../../../assets/images/avatar.png" alt="avatar" style="width:50px; border-radius:50%;">
+                </div>
+                <div class="flexalign-items-center justify-content-center">
+                    <div class="ml-2 text-lg cursor-pointer mb-1">{{loggedInUser.name}}</div>
+                    <div class="ml-2 text-lg text-color-secondary"><i class="pi pi-map-marker mr-1"></i>{{post.location.name}}</div>
+                </div>
+            </div>
+            <div class="col-12 md:col-12 mt-2 mb-2">
+                {{post.description}}
+            </div>
+            <div class="card w-12" style="background:black;">
+                <div style="padding:15px;">
+                    <p-galleria [value]="post.photos" [showItemNavigators]="post.photos.length > 1 ? true : false" [showThumbnails]="false" [showIndicators]="post.photos.length > 1 ? true : false" 
+                        [responsiveOptions]="responsiveOptions" [showIndicatorsOnItem]="post.photos.length > 1 ? true : false" 
+                        [containerStyle]="{'max-height': '300px' }">
+                        <ng-template pTemplate="item" let-item>
+                                <img [src]="getSanitizedBlobUrlFromBase64(item.content, item.fileName)" alt="{{item.fileName}}" style=" max-height:300px; display: block;" />
+                        </ng-template>
+                        <ng-template  pTemplate="thumbnail" let-item>
+                          <div  class="grid grid-nogutter justify-content-center">
+                            <img [src]="getSanitizedBlobUrlFromBase64(item.content, item.fileName)" alt="{{item.fileName}}" style="display: block; width:50px;" />
+                          </div>
+                        </ng-template>
+                      </p-galleria>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
