Update ui grid and refactor personal posts

--- a/TravelPics.UI/src/app/post/new-post/new-post.component.html
+++ b/TravelPics.UI/src/app/post/new-post/new-post.component.html
@@ -1,4 +1,4 @@
-<div class="col-12 md:col-12">
+<div class="col-12 md:col-12 mb-4">
     <div class="new-post flex flex-column">
         <div class="post-header flex align-items-center justify-content-center">
             Create a New Post
