--- a/TravelPics.UI/src/app/user/register/register.component.html
+++ b/TravelPics.UI/src/app/user/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="col-12 md:col-12">
+<div class="col-12 md:col-12 mb-8">
     <form [formGroup]="registerForm" (ngSubmit)="register()" class="form-section flex flex-column">
         <div class="flex align-items-center justify-content-center">
             <h1>Register</h1>
