--- a/TravelPics.UI/src/app/app.component.scss
+++ b/TravelPics.UI/src/app/app.component.scss
@@ -1,5 +1,8 @@
 .travelpics-container {
     width: 100%;
+    height:100%;
+    display: flex;
+    flex-direction: column;
     .travelpics-menubar {
         height: 70px;
         box-shadow: 0px 5px 6px #CED4DA;
@@ -11,14 +14,9 @@
     }
     .travelpics-content {
         height: calc(100% - 70px);
-        background-image: url('../assets/images/background.jpg?v=1');
-        background-size: cover;
-        background-position: center;
         .content-page {
             display: flex;
             flex-direction: column;
-            height: 100%;
-            width: 60%;
             max-width: 1900px;
             margin: 0 auto;
         }
