--- a/TravelPics.UI/src/app/post/my-posts/my-posts.component.html
+++ b/TravelPics.UI/src/app/post/my-posts/my-posts.component.html
@@ -1,14 +1,28 @@
 <travelpics-loader class="mt-12" [isLoading]="isLoading" [loadingMessage]="'Loading Personal Posts'"></travelpics-loader>
 <div class="col-12 md:col-12 flex flex-column mt-4 mb-4">
     <div *ngFor="let post of posts" class="flex flex-column align-items-center justify-content-center p-2 mr-2 ml-2">
-        <div class="flex align-items-start justify-content-start flex-column col-9 md:col-9 border-double border-round-xl border-bluegray-200 surface-overlay shadow-8">
-            <div class="flex  flex-row">
+        <div class="flex align-items-start justify-content-start flex-column col-7 md:col-7 border-double border-round-xl border-bluegray-200 surface-overlay shadow-8">
+            <div class="flex  flex-row col-12 md:col-12" style="padding:0px;">
                 <div class="flex align-items-center justify-content-center">
                     <img src="../../../assets/images/avatar.png" alt="avatar" style="width:50px; border-radius:50%;">
                 </div>
-                <div class="flexalign-items-center justify-content-center">
-                    <div class="ml-2 text-lg cursor-pointer mb-1">{{loggedInUser.name}}</div>
-                    <div class="ml-2 text-lg text-color-secondary"><i class="pi pi-map-marker mr-1"></i>{{post.location.name}}</div>
+                <div class="col-12 md:col-12" style="padding:0px;">
+                    <div class="flex justify-content-between  ml-2 text-lg col-10 md:col-10" style="padding:0px;">
+                        <div class="flex align-items-center justify-content-center">
+                            {{loggedInUser.name}}
+                        </div>
+                        <div class="flex align-items-center justify-content-center" style="font-size:0.8rem;">
+                            Posted On
+                        </div>
+                    </div>
+                    <div class="flex justify-content-between  ml-2 text-lg text-color-secondary col-10 md:col-10" style="padding:0px;">
+                        <div class="flex align-items-center justify-content-center">
+                            <i class="pi pi-map-marker mr-1"></i>{{post.location.name}}
+                        </div>
+                        <div class="flex align-items-start justify-content-start" style="font-size:0.8rem;">
+                            {{post.publishedOn | longDateTime}}
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-12 md:col-12 mt-2 mb-2">
