--- a/TravelPics.UI/src/app/shared/post-item/post-item.component.html
+++ b/TravelPics.UI/src/app/shared/post-item/post-item.component.html
@@ -7,7 +7,7 @@
             <div class="col-12 md:col-12" style="padding:0px;">
                 <div class="flex justify-content-between  ml-2 text-lg col-10 md:col-10" style="padding:0px;">
                     <div class="flex align-items-center justify-content-center">
-                        {{loggedInUser.name}}
+                        {{post.user.firstName+" "+post.user.lastName}}
                     </div>
                     <div class="flex align-items-center justify-content-center" style="font-size:0.8rem;">
                         Posted On
