--- a/TravelPics.UI/src/app/navigation/home/home.component.html
+++ b/TravelPics.UI/src/app/navigation/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<travelpics-loader class="mt-12" [isLoading]="isLoading" [loadingMessage]="'Loading Posts'"></travelpics-loader>
+<div class="col-12 md:col-12 flex flex-column mt-4 mb-4">
+    <div *ngFor="let post of posts">
+        <travelpics-post-item [getImageUrl]="getSanitizedBlobUrlFromBase64" [loggedInUser]="loggedInUser" [post]="post" [responsiveOptions]="responsiveOptions"></travelpics-post-item>
+    </div>
+</div>
+
+  
