--- a/TravelPics.UI/src/app/navigation/navigation/navigation.component.html
+++ b/TravelPics.UI/src/app/navigation/navigation/navigation.component.html
@@ -4,7 +4,7 @@
         <p-divider></p-divider>
         <travelpics-side-menu [baseRoute]="baseRoute"></travelpics-side-menu>
     </div>
-    <div class="content-area col-10 md:col-10">
+    <div class="content-area col-offset-2 col-10 md:col-10">
         <router-outlet></router-outlet>
     </div>
 </div>
