--- a/TravelPics.UI/src/app/profile/my-profile/my-profile.component.html
+++ b/TravelPics.UI/src/app/profile/my-profile/my-profile.component.html
@@ -1,1 +1,65 @@
-<p>my-profile works!</p>
+<travelpics-loader class="mt-12" [isLoading]="isLoading" [loadingMessage]="'Loading Profile'"></travelpics-loader>
+<div *ngIf="!isLoading" class="profile-menu-content grid ml-4">
+    <div class="flex flex-column col-3 md:col-3 profile">
+        <div class="flex align-items-center justify-content-center mb-2">
+            <img class="border-circle" src="../../../assets/images/avatar.png" alt="avatar" style="width:150px;">
+        </div>
+        <div class="flex align-items-center justify-content-center mb-2">
+            Edit profile image 
+         </div>  
+        <div class="flex align-items-start justify-content-start">
+            <div class="flex flex-column flex-wrap">             
+                <div class="flex align-items-start justify-content-start mb-1">
+                    User registered on:
+                </div>
+                <div class="flex align-items-start justify-content-start mb-2"style="font-size:0.8rem;opacity: 0.6;">
+                    {{user.createdOn | shortDateTime}}
+                </div>
+                <div class="flex align-items-start justify-content-start mb-2">
+                    Current posts: <a class="ml-1" routerLink="/navigation/posts/my" style="text-decoration:none;">{{user.posts.length}}</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="user-info-content col-7 md:col-7 ml-8">
+        <form [formGroup]="userForm" (ngSubmit)="updateUser()" class="form-section flex flex-column">
+            <div class="field">
+                <label for="email" class="col-12">Email:</label>
+                <div class="col-12  md:col-12 flex block ">
+                    <input id="email" class="inputfield w-12" pInputText formControlName="email">
+                </div>
+            </div>
+            <div class="field">
+                <label for="firstName" class="col-12  required-label">First Name:</label>
+                <div class=" col-12 md:col-12 flex block ">
+                    <input type="firstName" id="firstName" class="inputfield w-12" pInputText formControlName="firstName">
+                    <ng-container *ngIf="userForm.controls['firstName'].touched && userForm.controls['firstName'].invalid">
+                        <small class="p-error" *ngIf="userForm.controls['firstName'].errors?.required">First name is required.</small>
+                        <small class="p-error" *ngIf="userForm.controls['firstName'].errors?.WhiteSpaceNotAllowed">{{userForm.controls['firstName'].errors?.WhiteSpaceNotAllowed}}</small>
+                    </ng-container>
+                </div>
+            </div>
+            <div class="field">
+                <label for="lastName" class="col-12  required-label">Last Name:</label>
+                <div class=" col-12 md:col-12 flex block ">
+                    <input type="lastName" id="lastName" class="inputfield w-12" pInputText formControlName="lastName">
+                    <ng-container *ngIf="userForm.controls['lastName'].touched && userForm.controls['lastName'].invalid">
+                        <small class="p-error" *ngIf="userForm.controls['lastName'].errors?.required">Last name is required.</small>
+                        <small class="p-error" *ngIf="userForm.controls['lastName'].errors?.WhiteSpaceNotAllowed">{{userForm.controls['lastName'].errors?.WhiteSpaceNotAllowed}}</small>
+                    </ng-container>
+                </div>
+            </div>
+            <div class="field">
+                <label for="phone" class="col-12">Phone:</label>
+                <div class=" col-12 md:col-12 flex block ">
+                    <input type="phone" id="phone" class="inputfield w-12" pInputText formControlName="phone">
+                    <ng-container *ngIf="userForm.controls['phone'].touched && userForm.controls['phone'].invalid">
+                    </ng-container>
+                </div>
+            </div>
+            <div class="buttons mb-4">
+                <button [disabled]="!userForm.valid" pButton pRipple type="submit" label="Save Changes" class="p-button-raised p-button-primary"></button>
+            </div>
+        </form>
+    </div>
+</div>
