--- a/TravelPics.UI/src/app/post/new-post/new-post.component.html
+++ b/TravelPics.UI/src/app/post/new-post/new-post.component.html
@@ -1,3 +1,4 @@
+<travelpics-loader class="mt-12" [isLoading]="isLoading" [loadingMessage]="'Loading'"></travelpics-loader>
 <div class="col-12 md:col-12 mb-4">
     <div class="new-post flex flex-column">
         <div class="post-header flex align-items-center justify-content-center">
@@ -6,7 +7,8 @@
         <hr/>
         <div class="flex align-items-start justify-content-start ml-8 flex-column">
             <div class="flex inline-block mb-2">
-                <img src="../../../assets/images/avatar.png" alt="avatar" style="width:50px; border-radius:50%;">
+                <img *ngIf="loggedInUser.profileImageSrc == ''" class="border-circle" src="../../../assets/images/avatar.png" alt="avatar" class="border-circle" style="width:50px; height:50px;">
+                <img *ngIf="loggedInUser.profileImageSrc != ''" [src]="loggedInUser.profileImageSrc" alt="avatar" class="border-circle" style="width:50px; height:50px;">
                 <p class="ml-2 text-lg">{{loggedInUser.name}}</p>
             </div>
             <form [formGroup]="newPostForm" (ngSubmit)="createPost()" class="form-section flex flex-column">
