--- a/TravelPics.UI/src/app/post/preview-post/preview-post.component.html
+++ b/TravelPics.UI/src/app/post/preview-post/preview-post.component.html
@@ -3,10 +3,11 @@
         <div class="flex align-items-start justify-content-start flex-column">
             <div class="flex flex-wrap flex-row card-container">
                 <div class="flex align-items-center justify-content-center">
-                    <img src="../../../assets/images/avatar.png" alt="avatar" style="width:50px; border-radius:50%;">
+                    <img *ngIf="user.profileImageSrc == ''" src="../../../assets/images/avatar.png" alt="avatar" class="border-circle" style="width:50px; height:50px;">
+                    <img *ngIf="user.profileImageSrc != ''" [src]="user.profileImageSrc" alt="avatar" class="border-circle" style="width:50px; height:50px;">
                 </div>
                 <div class="flexalign-items-center justify-content-center">
-                    <div class="ml-2 text-lg">{{userName}}</div>
+                    <div class="ml-2 text-lg">{{user.name}}</div>
                     <div class="ml-2 text-lg"><i class="pi pi-map-marker location-icon"></i>{{post.location.name}}</div>
                 </div>
             </div>
