--- a/TravelPics.UI/src/app/shared/post-item/post-item.component.html
+++ b/TravelPics.UI/src/app/shared/post-item/post-item.component.html
@@ -2,7 +2,8 @@
     <div class="flex align-items-start justify-content-start flex-column col-7 md:col-7 border-double border-round-xl border-bluegray-200 surface-overlay shadow-8">
         <div class="flex  flex-row col-12 md:col-12" style="padding:0px;">
             <div class="flex align-items-center justify-content-center">
-                <img class="border-circle" [src]="getImageUrl(post.user.profileImage.content,post.user.profileImage.fileName)" alt="avatar" style="width:50px; height:50px;">
+                <img *ngIf="post.user.profileImage == undefined || post.user.profileImage == null" class="border-circle" style="width:50px; height:50px;" src="../../../assets/images/avatar.png" alt="avatar">
+                <img *ngIf="!!post.user.profileImage" class="border-circle" [src]="getImageUrl(post.user.profileImage.content,post.user.profileImage.fileName)" alt="avatar" style="width:50px; height:50px;">
             </div>
             <div class="col-12 md:col-12" style="padding:0px;">
                 <div class="flex justify-content-between  ml-2 text-lg col-10 md:col-10" style="padding:0px;">
