--- a/TravelPics.UI/src/app/shared/post-item/post-item.component.html
+++ b/TravelPics.UI/src/app/shared/post-item/post-item.component.html
@@ -43,5 +43,35 @@
                 </p-galleria>
             </div>
         </div>
+        <div class="col-12 md:col-12 mt-2 mb-2 border-500 surface-overlay border-3 border-round flex align-items-center justify-content-center">
+            <div *ngIf="!isLiked">
+                <a (click)="likePost()" pTooltip="Like post" tooltipPosition="top" (mouseover)="isHovered = true" (mouseleave)="isHovered = false">
+                    <i *ngIf="isHovered" class="pi pi-heart-fill post-liked">
+                    </i>
+                    <i *ngIf="!isHovered"class="pi pi-heart post-not-liked">
+                    </i>
+                </a>
+                <span *ngIf="post.likes.length == 0">
+                    Be the first person who likes this post.
+                </span>
+                <span *ngIf="post.likes.length > 0">
+                    {{post.likes.length}} people liked this post.
+                </span>
+            </div>
+            <div *ngIf="isLiked">
+                <a (click)="dislikePost()" pTooltip="Dislike post"  tooltipPosition="top" (mouseover)="isHovered = true" (mouseleave)="isHovered = false">
+                    <i *ngIf="!isHovered" class="pi pi-heart-fill post-liked">
+                    </i>
+                    <i *ngIf="isHovered"class="pi pi-heart post-not-liked">
+                    </i>
+                </a>
+                <span *ngIf="post.likes.length - 1 == 0">
+                    Only you liked this post.
+                </span>
+                <span *ngIf="post.likes.length - 1 > 0">
+                    You and {{post.likes.length - 1}} liked this post.
+                </span>
+            </div>
+        </div>
     </div>
 </div>
