Add markasread function for received notifications

--- a/TravelPics.UI/src/app/auth/login/login.component.html
+++ b/TravelPics.UI/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="w-12 mb-8">
+<div class="w-12 mb-4">
     <form [formGroup]="loginForm" (ngSubmit)="login()" class="form-section flex flex-column">
-        <div class="flex align-items-center justify-content-center mt-4">
+        <div class="flex align-items-center justify-content-center">
             <h1>Welcome</h1>
         </div>
         <div class="flex align-items-center justify-content-center mb-4">
