Make POC grid for notifications

--- a/TravelPics.UI/src/app/menu/menubar/menubar.component.scss
+++ b/TravelPics.UI/src/app/menu/menubar/menubar.component.scss
@@ -31,3 +31,11 @@
         margin-left: 5px;
     }
 }
+
+.notif-read{
+    background-color: white;
+}
+
+.notif-unread{
+    background-color: var(--surface-200);
+}
