--- a/TravelPics.UI/src/app/menu/menubar/menubar.component.html
+++ b/TravelPics.UI/src/app/menu/menubar/menubar.component.html
@@ -19,10 +19,16 @@
     </ng-template>
 </p-menubar>
 
-<p-overlayPanel #notificationPanel [showCloseIcon]="true" (onShow)="readNotifications()">
+<p-overlayPanel  #notificationPanel [showCloseIcon]="true" (onShow)="readNotifications()">
     <ng-template pTemplate="content">
-        <div class="w-12"*ngFor="let notif of newNotifications" style="border-bottom: 1px solid black;">
-            <p>{{notif.subject}}</p>
+        <travelpics-loader class="mt-12" [isLoading]="newNotifications.length == 0" [loadingMessage]="'Retrieving notifications'"></travelpics-loader>
+        <div *ngFor="let notif of newNotifications" class="w-12 flex align-items-center justify-content-start mt-0 mb-0" 
+            [ngClass]="isNotificationRead(notif) ? 'notif-read' : 'notif-unread'" style="border-bottom: 1px solid var(--surface-300);">
+            <div class="mb-2 mr-1 ml-4 mt-2 flex align-items-center justify-content-start">
+                <img *ngIf="notif.notificationLog.sender == null || notif.notificationLog.sender.profileImage == null" class="border-circle" style="width:50px; height:50px;" src="../../../assets/images/avatar.png" alt="avatar">
+                <img *ngIf="!!notif.notificationLog.sender && !!notif.notificationLog.sender.profileImage" class="border-circle" [src]="getImageUrl(notif.notificationLog.sender.profileImage.content,notif.notificationLog.sender.profileImage.fileName)" alt="avatar" style="width:50px; height:50px;">
+                <span class="ml-2">{{notif.subject}}</span>
+            </div>
         </div>
     </ng-template>
 </p-overlayPanel>
