--- a/TravelPics.UI/src/styles/primeng-overwrites/overlay.scss
+++ b/TravelPics.UI/src/styles/primeng-overwrites/overlay.scss
@@ -3,7 +3,6 @@
         width: 380px;
         max-height: 400px;
         overflow-y: auto;
-        padding-left: 0px;
-        padding-right:0px;
+        padding:0px;
     }
 }
