--- a/TravelPics.UI/src/app/navigation/navigation/navigation.component.scss
+++ b/TravelPics.UI/src/app/navigation/navigation/navigation.component.scss
@@ -1,7 +1,8 @@
 .navigation-menu-content{
     height: 100%;
     margin:0 auto;
-    
+    position: relative; 
+
     p{
         padding:20px;
         margin:0;
@@ -10,6 +11,18 @@
     }
     ::ng-deep .p-divider.p-divider-horizontal{
         margin:0;
+    }
+
+    .logout-area{
+        position: absolute; 
+        bottom: 80px; 
+        width: 100%; 
+        color:var(--text-color-secondary);
+        .logout-action{
+            margin-top:10px;
+            margin-left:20px;
+            font-size:1.1rem;
+        }
     }
 
     .menu-area{
