--- a/TravelPics.UI/src/styles/primeng-overwrites/menubar.scss
+++ b/TravelPics.UI/src/styles/primeng-overwrites/menubar.scss
@@ -17,7 +17,7 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-        width:calc(100% - #{$userMenuWidth} - #{$userMenuWidth} - #{$brandLogoWidth} - #{$brandLogoWidth});
+        width:calc(100% - #{$userMenuWidth} - #{$brandLogoWidth} - #{$brandLogoWidth});
     }
      ::ng-deep .p-menubar-start {
         height: $menuBarHeight;
