Add website search functionality + architecture

--- a/TravelPics.UI/src/app/menu/menubar/menubar.component.scss
+++ b/TravelPics.UI/src/app/menu/menubar/menubar.component.scss
@@ -39,3 +39,11 @@
 .notif-unread{
     background-color: var(--surface-200);
 }
+
+::ng-deep .p-autocomplete-items{
+    .p-autocomplete-item{
+        .label-item{
+            cursor:pointer;
+        }
+    }
+}
