--- a/TravelPics.UI/src/app/menu/menubar/menubar.component.html
+++ b/TravelPics.UI/src/app/menu/menubar/menubar.component.html
@@ -1,7 +1,17 @@
 <p-menubar [model]="items" class="main-menu" >
     <ng-template pTemplate="start" style="height:70px;" class="mr-8">
         <img src="../../../assets/travelpics-logo.png" class="brand-logo" alt="TravelPics logo">
-        <input type="text" pInputText placeholder="Search">
+        <!-- <input type="text" pInputText placeholder="Search"> -->
+        <p-autoComplete [(ngModel)]="searchKeyword" [suggestions]="results" (completeMethod)="search($event)" 
+            [minLength]="3" placeholder="Search" [showEmptyMessage]="true" (onHide)="onAutoCompleteHide()" (onSelect)="goToResource($event)">
+            <ng-template let-result pTemplate="item">
+                <label class="label-item">
+                    <i *ngIf="result.entityTypeId == 1" class="pi pi-fw pi-user"></i>
+                    <i *ngIf="result.entityTypeId == 2" class="pi pi-map-marker"></i>
+                    {{result.name}}
+                </label>
+            </ng-template>
+        </p-autoComplete>
     </ng-template>
 
     <ng-template pTemplate="end" style="height:70px;">
@@ -19,7 +29,7 @@
     </ng-template>
 </p-menubar>
 
-<p-overlayPanel  #notificationPanel [showCloseIcon]="true" (onShow)="readNotifications()">
+<p-overlayPanel #notificationPanel [showCloseIcon]="true" (onShow)="readNotifications()">
     <ng-template pTemplate="content">
         <travelpics-loader class="mt-4 mb-4" [isLoading]="newNotifications.length == 0" [loadingMessage]="'Retrieving notifications'"></travelpics-loader>
         <div *ngFor="let notif of newNotifications" class="w-12 flex align-items-center justify-content-start mt-0 mb-0" 
