--- a/TravelPics.UI/src/app/post/user-posts/user-posts.component.html
+++ b/TravelPics.UI/src/app/post/user-posts/user-posts.component.html
@@ -1,4 +1,4 @@
-<travelpics-loader class="mt-12" [isLoading]="isLoading" [loadingMessage]="'Loading Latest Posts'"></travelpics-loader>
+<travelpics-loader class="mt-12" [isLoading]="isLoading" [loadingMessage]="'Loading User Posts'"></travelpics-loader>
 <div class="col-12 md:col-12 flex flex-column mt-4 mb-4">
     <div *ngFor="let post of posts">
         <travelpics-post-item [getImageUrl]="getImageUrl" [loggedInUser]="loggedInUser" [post]="post" [responsiveOptions]="responsiveOptions"></travelpics-post-item>
